--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!doctype html>
 <html>
 <head>
-  <title>paper-slider demo</title>
+  <title>paper-range-slider demo</title>
 
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
   <meta name="mobile-web-app-capable" content="yes">
@@ -20,23 +20,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
   <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
   <link rel="import" href="../../paper-styles/color.html">
-  <link rel="import" href="../paper-slider.html">
+  <link rel="import" href="../paper-range-slider.html">
 
   <style is="custom-style" include="demo-pages-shared-styles">
-    paper-slider {
+    paper-range-slider {
       width: 100%;
     }
   </style>
 </head>
 <body unresolved>
   <div class="vertical-section-container centered">
-    <h3>paper-sliders can have values, secondary progress values, or be disabled.</h3>
+    <h3>paper-range-sliders can have values, secondary progress values, or be disabled.</h3>
     <demo-snippet>
       <template>
-        <paper-slider value="21"></paper-slider>
-        <paper-slider value="0"></paper-slider>
-        <paper-slider value="50" secondary-progress="85"></paper-slider>
-        <paper-slider disabled value="33"></paper-slider>
+        <paper-range-slider value="21"></paper-range-slider>
+        <paper-range-slider value="0"></paper-range-slider>
+        <paper-range-slider value="50" secondary-progress="85"></paper-range-slider>
+        <paper-range-slider disabled value="33"></paper-range-slider>
       </template>
     </demo-snippet>
 
@@ -44,26 +44,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <demo-snippet>
       <template>
         <style is="custom-style">
-          paper-slider.red {
-            --paper-slider-knob-color: var(--paper-red-500);
-            --paper-slider-active-color: var(--paper-red-500);
+          paper-range-slider.red {
+            --paper-range-slider-knob-color: var(--paper-red-500);
+            --paper-range-slider-active-color: var(--paper-red-500);
           }
-          paper-slider.green {
-            --paper-slider-knob-color: var(--paper-green-500);
-            --paper-slider-active-color: var(--paper-green-500);
+          paper-range-slider.green {
+            --paper-range-slider-knob-color: var(--paper-green-500);
+            --paper-range-slider-active-color: var(--paper-green-500);
           }
-          paper-slider.blue {
-            --paper-slider-knob-color: var(--paper-light-blue-500);
-            --paper-slider-active-color: var(--paper-light-blue-500);
+          paper-range-slider.blue {
+            --paper-range-slider-knob-color: var(--paper-light-blue-500);
+            --paper-range-slider-active-color: var(--paper-light-blue-500);
           }
         </style>
 
         <div>R</div>
-        <paper-slider class="red" value="23" max="255" editable></paper-slider>
+        <paper-range-slider class="red" value="23" max="255" editable></paper-range-slider>
         <div>G</div>
-        <paper-slider class="green" value="183" max="255" editable></paper-slider>
+        <paper-range-slider class="green" value="183" max="255" editable></paper-range-slider>
         <div>B</div>
-        <paper-slider class="blue" value="211" max="255" editable></paper-slider>
+        <paper-range-slider class="blue" value="211" max="255" editable></paper-range-slider>
       </template>
     </demo-snippet>
 
@@ -76,18 +76,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             color: #a0a0a0;
           }
           #grade {
-            --paper-slider-secondary-color: var(--paper-red-a200);
+            --paper-range-slider-secondary-color: var(--paper-red-a200);
           }
         </style>
-        <div>Brightness</div><br>
-        <paper-slider pin value="20"></paper-slider>
+        <div>Range</div><br>
+        <paper-range-slider id="range" pin value="20" end-value="60" start-value="30" ></paper-range-slider>
         <div>Ratings: <span id="ratingsLabel" class="caption"></span></div><br>
-        <paper-slider id="ratings" pin snaps max="10" max-markers="10" step="1" value="5"></paper-slider>
+        <paper-range-slider id="ratings" pin snaps max="10" max-markers="10" step="1" value="5"></paper-range-slider>
         <div>Grade: <span id="gradeLabel" class="caption"></span></div><br>
-        <paper-slider id="grade" pin value="20" secondary-progress="70"></paper-slider>
+        <paper-range-slider id="grade" pin value="20" secondary-progress="70"></paper-range-slider>
 
         <script>
           document.addEventListener('WebComponentsReady', function() {
+
+            var range = document.querySelector('#range');
+            range.endValue = 40;
+            range.startValue = 10;
+
             var ratings = document.querySelector('#ratings');
             ratings.addEventListener('value-change', function() {
               document.querySelector('#ratingsLabel').textContent = ratings.value;
