--- a/demo/index.html
+++ b/demo/index.html
@@ -80,7 +80,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           }
         </style>
         <div>Range Delay: <span>{{startValue}}</span> Duration: <span>{{endValue}}</span></div><br>
-        <paper-range-slider id="range" pin value="0" end-value="{{endValue}}" start-value="{{startValue}}" ></paper-range-slider>
+        <paper-range-slider id="range" pin value="0" min="0" max="5" step="0.1" end-value="{{endValue}}" start-value="{{startValue}}" ></paper-range-slider>
         <div>Ratings: <span id="ratingsLabel" class="caption"></span></div><br>
         <paper-range-slider id="ratings" pin snaps max="10" max-markers="10" step="1" value="5"></paper-range-slider>
         <div>Grade: <span id="gradeLabel" class="caption"></span></div><br>
@@ -90,8 +90,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           document.addEventListener('WebComponentsReady', function() {
 
             var range = document.querySelector('#range');
-            range.endValue = 10;
-            range.startValue = 10;
+            range.endValue = 1;
+            range.startValue = 3;
 
             var ratings = document.querySelector('#ratings');
             ratings.addEventListener('value-change', function() {
