--- a/paper-range-slider.html
+++ b/paper-range-slider.html
@@ -149,7 +149,11 @@ Custom property | Description | Default
         --paper-progress-container-color: var(--paper-range-slider-container-color, --paper-grey-400);
         --paper-progress-height: var(--calculated-paper-range-slider-height);
       }
-
+      #rangeBar
+      {
+        --paper-progress-height:6px;
+        margin-top: -2px;
+      }
       .slider-markers {
         position: absolute;
         top: calc(14px + var(--paper-range-slider-height,2px)/2);
@@ -202,16 +206,15 @@ Custom property | Description | Default
       }
 
       .slider-knob-inner {
-        margin: 10px;
-        width: calc(100% - 20px);
-        height: calc(100% - 20px);
         background-color: var(--paper-range-slider-knob-color, --google-blue-700);
         border: 2px solid var(--paper-range-slider-knob-color, --google-blue-700);
-        border-radius: 50%;
-
+        margin: 7px;
+        padding: 5px;
+        width: calc(100% - 20px);
+        height: calc(100% - 20px);
+        border-radius: 20% 20% 50% 50%;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
-
         transition-property: -webkit-transform, background-color, border;
         transition-property: transform, background-color, border;
         transition-duration: 0.18s;
@@ -233,6 +236,16 @@ Custom property | Description | Default
         transition-property: transform, background-color, border;
         transition-duration: 0.18s;
         transition-timing-function: ease;
+      }
+      .r-knob
+      {
+
+        border-radius:  0 50% 50% 0;
+      }
+      .l-knob
+      {
+
+        border-radius: 50% 0 0 50%;
       }
       .expand:not(.pin) > .slider-knob > .slider-knob-inner,
       .estart:not(.pin) > .slider-start-knob > .range-knob-inner,
@@ -401,14 +414,14 @@ Custom property | Description | Default
            on-down="_knobStartDown"
            on-up="_resetKnob"
            on-track="_onTrack">
-        <div class="range-knob-inner" value$="[[immediateStartValue]]"></div>
+        <div class="range-knob-inner l-knob" value$="[[immediateStartValue]]"></div>
       </div>
       <div hidden$="[[_rangeHidden(startValue, endValue,immediateStartValue,immediateEndValue)]]" id="endKnob"
            class="slider-end-knob"
            on-down="_knobEndDown"
            on-up="_resetKnob"
            on-track="_onTrack">
-        <div class="range-knob-inner" value$="[[immediateSumValue]]"></div>
+        <div class="range-knob-inner r-knob" value$="[[immediateSumValue]]"></div>
       </div>
     </div>
 
